--- a/api_key.env
+++ b/api_key.env
@@ -3,5 +3,5 @@
 # ---------------------------------------------------------
 # [ES] Configuración de la Clave de API de Gemini
 # Consigue tu clave de API gratuita en: https://aistudio.google.com/api-keys
+API_KEY=
 
-API_KEY=tu_clave_de_api_gemini_aqui
